Minor refactoring and cleanup

--- a/Jira Ticket Editor/app/globals.scss
+++ b/Jira Ticket Editor/app/globals.scss
@@ -16,7 +16,7 @@
     
     // Colors
     background-color: inherit;
-    color: c.$text;
+    color: c.$whiteText;
 
     // Text
     font-family: Arial, Helvetica, sans-serif;
@@ -29,5 +29,5 @@ body{
     height: 100%;
 
     // Colors
-    background-color: c.$background;
+    background-color: c.$darkGray1;
 }
